--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,10 @@ dependencies {
     // redis & redisson
 //    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //    implementation 'org.redisson:redisson:3.23.5'
+
+    // Elasticsearch
+    implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
+
 }
 
 tasks.named('test') {
