--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     // redis & redisson
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //    implementation 'org.redisson:redisson:3.23.5'
+
+    //s3
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
+    implementation platform('software.amazon.awssdk:bom:2.27.21')
+    implementation 'software.amazon.awssdk:s3'
 }
 
 tasks.named('test') {
