--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
       host: localhost
       port: 6379
   application:
-    name: lili-books
+    name: ilil-books
 
   datasource:
     url: ${DB_URL}
