--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
     implementation platform('software.amazon.awssdk:bom:2.27.21')
     implementation 'software.amazon.awssdk:s3'
+
+    //swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 }
 
 tasks.named('test') {
