--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   AWS_REGION: ap-northeast-2
-  ECR_REPOSITORY: test_ci
-  IMAGE_TAG: latest
+  ECR_REPOSITORY: ilil-books
+  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   deploy:
@@ -41,7 +41,7 @@ jobs:
         run: |
           mkdir -p deploy/scripts
           cp appspec.yml deploy/
-          cp -r scripts/* deploy/scripts/
+          cp -r scripts/. deploy/scripts/ || echo "No scripts to copy"
           cd deploy
           zip -r deploy.zip .
 
@@ -57,6 +57,17 @@ jobs:
           SOURCE_DIR: deploy
           DEST_DIR: codedeploy/
 
+      - name: Install AWS CLI
+        run: |
+          apt-get update && \
+          apt-get install -y curl unzip && \
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+          unzip awscliv2.zip && \
+          ./aws/install
+
+      - name: Check AWS CLI
+        run: aws --version
+
       - name: Deploy using AWS CLI
         run: |
           aws deploy create-deployment \
@@ -65,6 +76,8 @@ jobs:
             --deployment-config-name CodeDeployDefault.OneAtATime \
             --s3-location bucket=ec2-docker-deploy,bundleType=zip,key=codedeploy/deploy.zip \
             --region ap-northeast-2
+        env:
+          AWS_PAGER: ""
 
       - name: Notify via Slack
         uses: rtCamp/action-slack-notify@v2
