feat(client): 네이버 소셜 로그인 적용
- 로그인 인증
- 접근 토근 발급
- 프로필 조회

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,3 +51,10 @@ cloud:
     s3:
       bucket: ${AWS_S3_BUCKET_NAME}
     region: ${AWS_REGION}
+
+
+client:
+   naver:
+       client-id: ${NAVER_CLIENT_ID}
+       client-secret: ${NAVER_CLIENT_SECRET}
+       redirect-uri: ${NAVER_REDIRECT_URI}
