--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,3 +58,6 @@ client:
        client-id: ${NAVER_CLIENT_ID}
        client-secret: ${NAVER_CLIENT_SECRET}
        redirect-uri: ${NAVER_REDIRECT_URI}
+   google:
+     client_id: ${GOOGLE_CLIENT_ID}
+     redirect_uri: ${GOOGLE_REDIRECT_URI}
