--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,13 @@ dependencies {
     //swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 
+    //OAuth2
+    implementation 'org.springframework.security:spring-security-oauth2-client:6.4.1'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.4.4'
+
+    //webflux
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.4.4'
+
 }
 
 tasks.named('test') {
