--- a/build.gradle
+++ b/build.gradle
@@ -67,9 +67,12 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
 //    implementation 'co.elastic.clients:elasticsearch-java:8.11.0'
 
-
     //swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
+
+    // webClient 및 webflux
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 }
 
 tasks.named('test') {
