--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     redis:
       host: localhost
       port: 6379
+    elasticsearch:
+      uris: http://localhost:9200
+      repositories:
+        enabled: true
   application:
     name: ilil-books
 
@@ -53,6 +57,14 @@ cloud:
       bucket: ${AWS_S3_BUCKET_NAME}
 
 client:
+   naver:
+      client-id: ${NAVER_CLIENT_ID}
+      client-secret: ${NAVER_CLIENT_SECRET}
+      redirect-uri: ${NAVER_REDIRECT_URI}
+   google:
+      client_id: ${GOOGLE_CLIENT_ID}
+      client_secret: ${GOOGLE_CLIENT_SECRET}
+      redirect_uri: ${GOOGLE_REDIRECT_URI}
   naver:
       client-id: ${NAVER_CLIENT_ID}
       client-secret: ${NAVER_CLIENT_SECRET}
