--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,9 +58,15 @@ services:
     image: redis:latest
     container_name: redis
     ports:
-      - "6379:6379"  # 로컬 포트 매핑
+      - "6379:6379"
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     networks:
       - esnet
+    healthcheck:
+      test: [ "CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.15.5
