--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,8 @@ dependencies {
 
     // redis & redisson
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-//    implementation 'org.redisson:redisson:3.23.5'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.20.0'
+    implementation 'org.redisson:redisson:3.23.5'
 
     //s3
 //    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
