feat(order): 재고 감소시 낙관락 사용
- 재고 감소시 낙관락 사용
- 3번 실패할 경우 예러 출력
- retry 의존성 추가
- Book에 버전 추가

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //    implementation 'org.redisson:redisson:3.23.5'
 
+    // retry
+    implementation 'org.springframework.retry:spring-retry'
+
+    // aop
+    implementation 'org.springframework:spring-aspects'
+
     //s3
 //    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
     implementation platform('software.amazon.awssdk:bom:2.27.21')
