--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -32,8 +32,15 @@ jobs:
       - name: Give permission to gradlew
         run: chmod +x ./gradlew
 
-      - name: Run Tests
-        run: ./gradlew test
+      - name: Run tests with coverage
+        run: ./gradlew clean test jacocoTestReport
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: build/reports/jacoco/test/jacocoTestReport.xml
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   notify:
     name: Send Notification
