fix: slack webhook typo

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -52,6 +52,6 @@ jobs:
       - name: Notify via Slack
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_MESSAGE: "build and run test 완료하였습니다"
         if: always()
