--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,22 @@
-name: Deploy Docker Image to EC2
+name: deploy
 
 on:
   push:
     branches:
       - main
-
-env:
-  AWS_REGION: ap-northeast-2
-  ECR_REPOSITORY: ilil-books
-  IMAGE_TAG: ${{ github.sha }}
+      - feat/ci_cd # 테스트
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      IMAGE_TAG: ${{ github.sha }}
+      ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+      IMAGE_URI: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
 
     steps:
-      - name: Checkout source
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
@@ -23,66 +24,34 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-        with:
-          mask-password: true
 
-      - name: Build and Push Docker image to ECR
+      - name: Build and Push Docker image
         run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $IMAGE_URI .
+          docker push $IMAGE_URI
 
-      - name: Setup SSH key
-        run: |
-          mkdir -p ~/.ssh
-          SSH_PRIVATE_KEY="${{ secrets.EC2_SSH_KEY }}"
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 400 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> $HOME/.ssh/known_hosts
-
-      - name: Connect with SSH
-        run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} 'echo connected'
-
-      - name: Upload docker-compose.yml to EC2
-        uses: appleboy/ssh-action@master
+      - name: Render updated task definition
+        id: render-task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: ".docker/docker-compose.yml"
-          target: "/home/ubuntu/"
+          task-definition: ecs-task-def.json
+          container-name: ilil-books-app
+          image: $IMAGE_URI
 
-      - name: Create .env.production on EC2
-        uses: appleboy/ssh-action@master
+      - name: Deploy to ECS
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            echo "DB_URL=${{ secrets.DB_URL }}" > /home/ubuntu/.env.production
-            echo "DB_USER=${{ secrets.DB_USER }}" >> /home/ubuntu/.env.production
-            echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> /home/ubuntu/.env.production
-
-      - name: Run docker-compose on EC2
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd /home/ubuntu
-            docker-compose down
-            docker-compose pull
-            docker-compose up -d
+          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
+          service: ilil-books-service
+          cluster: ilil-books
+          wait-for-service-stability: true
 
       - name: Notify via Slack
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_WEB_MESSAGE: "EC2에 Docker 이미지 배포를 완료하였습니다."
+          SLACK_WEB_MESSAGE: "ECS에 프로젝트 배포를 완료하였습니다."
