--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - feat/ci_cd # 테스트
+#      - feat/ci_cd # 테스트
 
 jobs:
   deploy:
@@ -12,8 +12,8 @@ jobs:
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       IMAGE_TAG: ${{ github.sha }}
-      ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
-      IMAGE_URI: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
+      # ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+      # IMAGE_URI: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
 
     steps:
       - name: Checkout code
@@ -30,9 +30,19 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build and Push Docker image
+        id: build-image
         run: |
+          IMAGE_URI="${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}"
+          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+          echo $IMAGE_URI
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
+
+      - name: Render task definition using sed
+        run: sed "s|__IMAGE_URI__|${{ env.IMAGE_URI }}|g" ecs-task-def-template.json > ecs-task-def.json
+
+#      - name: debug task definition
+#        run: cat ecs-task-def.json # 디버그용
 
       - name: Render updated task definition
         id: render-task-def
@@ -40,13 +50,13 @@ jobs:
         with:
           task-definition: ecs-task-def.json
           container-name: ilil-books-app
-          image: $IMAGE_URI
+          image: ${{ env.IMAGE_URI }}
 
       - name: Deploy to ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
-          service: ilil-books-service
+          task-definition: ecs-task-def.json
+          service: ililbooks-service
           cluster: ilil-books
           wait-for-service-stability: true
 
