feat(notification): 알림 전송 기능 추가

--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,9 @@ dependencies {
 
     // health check
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // SMTP
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
