--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     redis:
       host: localhost
       port: 6379
-      password: ${REDIS_PASSWORD}
+#      password: ${REDIS_PASSWORD}
     elasticsearch:
       uris: http://localhost:9200
       repositories:
@@ -59,6 +59,16 @@ spring:
         format_sql: true
         use_sql_comments: true
         dialect: org.hibernate.dialect.MySQL8Dialect
+
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
+    template:
+      default-receive-queue: order-mail-queue # queue 이름
+      exchange: order.mail.exchange #producer가 데이터를 보낼 교환소
+      routing-key: order.mail
 
 jwt:
   secret:
