--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:4.1.0-management
-    container_name: rebbitmq
+    container_name: rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
