feat(payment): 결제 저장 및 요청 구현
- 결제를 저장하고 요청하는 API 구현
- 추후 API 통합 예정

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,20 @@ dependencies {
 
     // SMTP
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // iamport(portone)
+    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
+}
+
+repositories {
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
+}
+
+dependencies {
+
 }
 
 tasks.named('test') {
