--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,7 +66,7 @@ spring:
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
     template:
-      exchange: order.mail.exchange #producer가 데이터를 보낼 교환소
+      exchange: mail.exchange #producer가 데이터를 보낼 교환소
 
 jwt:
   secret:
