feat(notification): 메일 전송 시 AWS SES 적용

--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     implementation platform('software.amazon.awssdk:bom:2.27.21')
     implementation 'software.amazon.awssdk:s3'
 
+    // ses
+    implementation("software.amazon.awssdk:ses:2.31.30")
+
     // Elasticsearch
     implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
 //    implementation 'co.elastic.clients:elasticsearch-java:8.11.0'
