feat(notification): SES 적용
- controller, service 분리
v1은 Gmail SMTP 방식이고 v2는 Ses
SMTP 방식입니다.

- SES를 통해 기본 알림 테스트를 완료하였습니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,6 +84,9 @@ cloud:
       access-key: ${AWS_ACCESS_KEY_ID}
     s3:
       bucket: ${AWS_S3_BUCKET_NAME}
+    ses:
+      access-key: ${AWS_SES_ACCESS_KEY}
+      secret-key: ${AWS_SES_SECRET_KEY}
 
 client:
   naver:
