--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,6 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // spring security
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
 
     // jwt
@@ -54,7 +53,7 @@ dependencies {
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 
     // spring cloud AWS S3
-//    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
 
     // env
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
@@ -71,13 +70,13 @@ dependencies {
     implementation 'org.springframework:spring-aspects'
 
     //s3
-//    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
     implementation platform('software.amazon.awssdk:bom:2.27.21')
     implementation 'software.amazon.awssdk:s3'
 
     // Elasticsearch
     implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
-//    implementation 'co.elastic.clients:elasticsearch-java:8.11.0'
+    implementation 'co.elastic.clients:elasticsearch-java:8.11.0'
 
     //swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
@@ -93,6 +92,8 @@ dependencies {
 
     //RabbitMQ
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+    implementation "ca.pjer:logback-awslogs-appender:1.6.0"
 }
 
 tasks.named('test') {
