--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 jacoco {
@@ -94,6 +95,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
     implementation "ca.pjer:logback-awslogs-appender:1.6.0"
+    implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
+    implementation 'software.amazon.awssdk:ses'
 }
 
 tasks.named('test') {
