--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ dependencies {
 
     // Elasticsearch
     implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
-    implementation 'co.elastic.clients:elasticsearch-java:8.11.0'
+//    implementation 'co.elastic.clients:elasticsearch-java:8.11.0'
 
     //swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
