--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,15 +25,15 @@ services:
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - BOOK_API_KEY=${BOOK_API_KEY}
       - SPRING_PROFILES_ACTIVE=docker
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}      # 추가
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} # 추가
-      - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}       # 추가
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
       - AWS_REGION=${AWS_REGION}
     networks:
       - esnet
 
     env_file:
-      - .env  # .env 파일 로드
+      - .env
 
 
   db:
@@ -63,7 +63,7 @@ services:
     networks:
       - esnet
     healthcheck:
-      test: [ "CMD", "redis-cli", "-a", "ping" ] # ${REDIS_PASSWORD}"
+      test: [ "CMD", "redis-cli", "-a", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -75,7 +75,7 @@ services:
       - discovery.type=single-node
       - bootstrap.memory_lock=true
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
-      - xpack.security.enabled=false   # 보안 비활성화
+      - xpack.security.enabled=false
     ulimits:
       memlock:
         soft: -1
