feat: 배포 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,10 +49,7 @@ spring:
     redis:
       host: localhost
       port: 6379
-    elasticsearch:
-      uris: http://localhost:9200
-      repositories:
-        enabled: true
+#      password: ${REDIS_PASSWORD}
 
   mail:
     host: smtp.gmail.com
