--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -26,7 +26,7 @@ spring:
 
   datasource:
     url: jdbc:ililbooks.ch2g6me4m3k4.ap-northeast-2.rds.amazonaws.com:3306/ililbooks
-    username: root
+    username: ${RDS_USERNAME}
     password: ${RDS_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
