--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -36,13 +36,13 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        show_sql: true
-        format_sql: true
-        use_sql_comments: true
+        show_sql: false
+        format_sql: false
+        use_sql_comments: false
         type:
           descriptor:
             sql:
-              bind: true
+              bind: false
         dialect: org.hibernate.dialect.MySQLDialect
 
   data:
