--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -25,9 +25,9 @@ spring:
     name: ilil-books
 
   datasource:
-    url: ${DB_URL:jdbc:mysql://localhost:3306/ililbooks}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    url: jdbc:mysql://ililbooks.ch2g6me4m3k4.ap-northeast-2.rds.amazonaws.com:3306/ililbooks
+    username: ${RDS_USERNAME}
+    password: ${RDS_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -47,7 +47,7 @@ spring:
 
   data:
     redis:
-      host: localhost
+      host: 10.0.152.30
       port: 6379
 
   mail:
@@ -63,7 +63,7 @@ spring:
             enable: true
 
   rabbitmq:
-    host: localhost
+    host: 10.0.159.49
     port: 5672
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
@@ -109,3 +109,15 @@ client:
     client-id: ${KAKAO_CLIENT_ID}
     client-secret: ${KAKAO_CLIENT_SECRET}
     redirect-uri: ${KAKAO_REDIRECT_URI}
+
+
+logging:
+  level:
+    root: INFO
+    com.example.ililbooks: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.hibernate.orm.jdbc.bind: TRACE
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+
